--- a/src/functionalTest/resources/projects/detect-scala-library/compile/build.gradle
+++ b/src/functionalTest/resources/projects/detect-scala-library/compile/build.gradle
@@ -9,5 +9,5 @@ repositories {
 description = 'defines scala library using the "implementation" configuration'
 
 dependencies {
-    implementation group: 'org.scala-lang', name: 'scala-library', version: "${detectedScalaLibraryVersion}"
+    implementation "org.scala-lang:scala-library:${detectedScalaLibraryVersion}"
 }
