--- a/src/functionalTest/resources/projects/multi-module-plugin-not-configured-for-scala/build.gradle
+++ b/src/functionalTest/resources/projects/multi-module-plugin-not-configured-for-scala/build.gradle
@@ -15,7 +15,7 @@ subprojects { p ->
         apply plugin: 'java'
         dependencies {
             implementation platform(project(':dependencies'))
-            testImplementation group: 'org.junit.platform', name: 'junit-platform-runner'
+            testImplementation 'org.junit.platform:junit-platform-runner'
         }
 
         test {
