--- a/src/functionalTest/resources/projects/multi-module-plugin-not-configured-for-scala/java_only/build.gradle
+++ b/src/functionalTest/resources/projects/multi-module-plugin-not-configured-for-scala/java_only/build.gradle
@@ -1,3 +1,3 @@
 dependencies {
-    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
 }
