--- a/src/functionalTest/resources/projects/scala-single-module-dependency-manager/build.gradle
+++ b/src/functionalTest/resources/projects/scala-single-module-dependency-manager/build.gradle
@@ -15,17 +15,17 @@ apply plugin: 'scala'
 
 dependencyManagement {
     dependencies {
-        dependency group: 'org.scala-lang', name: 'scala-library', version: "${scalaVersionMajor}.${scalaVersionMinor}.${scalaVersionBuild}"
+        dependency "org.scala-lang:scala-library:${scalaVersionMajor}.${scalaVersionMinor}.${scalaVersionBuild}"
     }
 }
 
 dependencies {
-    implementation group: 'org.scala-lang', name: 'scala-library'
+    implementation 'org.scala-lang:scala-library'
 
-    testRuntimeOnly group: 'org.junit.vintage', name: 'junit-vintage-engine', version: junitVersion
-    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: junitPlatformVersion
+    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:${junitVersion}"
+    testImplementation "org.junit.platform:junit-platform-runner:${junitPlatformVersion}"
 
-    testImplementation group: 'org.scalatest', name: "scalatest_${scalaVersionMajor}.${scalaVersionMinor}", version: scalatestVersion
+    testImplementation "org.scalatest:scalatest_${scalaVersionMajor}.${scalaVersionMinor}:${scalatestVersion}"
 }
 
 test {
